Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
None
-
64 Bit Ununtu 14.04
Description
This regression was introduced in https://github.com/apache/parquet-cpp/commit/fc5228af3eee2ec8176e404ecb34b7ba985d0e4d. It can be seen with
((fc5228a...))$ nm -g debug/libparquet.so | c++filt | grep parquet::TypedColumnReader
compared with the prior commit. We need to change one of our examples (like the reader-writer example) to use dynamic linking so this problem is caught in the future.