PARQUET-1029: [C++] Some extern template symbols not being exported in gcc

Extern template visibility contributes to be a mystery to me, but this fixes the regression from PARQUET-991.

cc @saatvikshah1994

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #352 from wesm/PARQUET-1029 and squashes the following commits:

3f52852 [Wes McKinney] Some extern template symbols not being exported in gcc

Change-Id: Ibe692915732cf02d8d7582edfd0240bd525630c5